Add setting for caching to disk

--- a/NewHorizons/default-config.json
+++ b/NewHorizons/default-config.json
@@ -1,9 +1,10 @@
 {
 	"enabled": true,
-	"settings": {
-		"Debug": false,
-		"Custom title screen": true,
-		"Default System Override": "",
-		"Verbose Logs": false
-	}
+  "settings": {
+    "Debug": false,
+    "Custom title screen": true,
+    "Default System Override": "",
+    "Verbose Logs": false,
+    "Cache Images to Disk": true
+  }
 }
